section_4_network_policy/allow_egress_to_backend.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-egress-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: backend
