section_4_network_policy/allow_ingress_to_backend.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-ingress-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: frontend
